--- a/package.json
+++ b/package.json
@@ -15,8 +15,5 @@
   "bugs": {
     "url": "https://github.com/azharakbar/GALAXY-FOODS-PROJECT/issues"
   },
-  "homepage": "https://github.com/azharakbar/GALAXY-FOODS-PROJECT#readme",
-  "dependencies": {
-    "express": "^4.15.3"
-  }
+  "homepage": "https://github.com/azharakbar/GALAXY-FOODS-PROJECT#readme"
 }
