--- a/package.json
+++ b/package.json
@@ -15,5 +15,19 @@
   "bugs": {
     "url": "https://github.com/azharakbar/GALAXY-FOODS-PROJECT/issues"
   },
-  "homepage": "https://github.com/azharakbar/GALAXY-FOODS-PROJECT#readme"
+  "homepage": "https://github.com/azharakbar/GALAXY-FOODS-PROJECT#readme",
+  "dependencies": {
+    "bluebird": "^3.5.0",
+    "body-parser": "^1.17.2",
+    "cookie-parser": "^1.4.3",
+    "cors": "^2.8.3",
+    "express": "^4.15.3",
+    "express-session": "^1.15.3",
+    "hat": "0.0.3",
+    "md5": "^2.2.1",
+    "mongoose": "^4.11.1",
+    "morgan": "^1.8.2",
+    "passport": "^0.3.2",
+    "uniqid": "^4.1.1"
+  }
 }
