--- a/package.json
+++ b/package.json
@@ -29,5 +29,11 @@
     "morgan": "^1.8.2",
     "passport": "^0.3.2",
     "uniqid": "^4.1.1"
+  },
+  "devDependencies": {
+    "gulp": "^3.9.1",
+    "gulp-compress": "0.0.9",
+    "gulp-concat": "^2.6.1",
+    "gulp-uglify": "^3.0.0"
   }
 }
