--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "mongoose": "^4.11.1",
     "morgan": "^1.8.2",
     "passport": "^0.3.2",
+    "request": "^2.81.0",
     "uniqid": "^4.1.1"
   },
   "devDependencies": {
