Completed STOCK REPORT .. :)

--- a/jsreport/data/templates/STOCK REPORT/config.json
+++ b/jsreport/data/templates/STOCK REPORT/config.json
@@ -3,8 +3,10 @@
     "recipe": "phantom-pdf",
     "engine": "jsrender",
     "modificationDate": {
-        "$$date": 1504980766959
+        "$$date": 1505028711411
     },
     "_id": "R9d3SgCz3gaZSvO0",
-    "data": null
+    "data": {
+        "shortid": "H1YbP8z9W"
+    }
 }
