CANCEL ORDER & BUG FIXES

--- a/jsreport/data/data/trxTest/config.json
+++ b/jsreport/data/data/trxTest/config.json
@@ -1,10 +1,8 @@
 {
     "shortid": "ryTBJOfc-",
-    "creationDate": {
-        "$$date": 1505029976353
-    },
+    "creationDate": "2017-09-10T07:52:56.353Z",
     "modificationDate": {
-        "$$date": 1505029976353
+        "$$date": 1505036091591
     },
     "_id": "2NUUoy0hi3kaoM4Z"
 }
