--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "uniqid": "^4.1.1"
   },
   "devDependencies": {
+    "eslint": "^4.8.0",
+    "eslint-config-google": "^0.9.1",
     "gulp": "^3.9.1",
     "gulp-compress": "0.0.9",
     "gulp-concat": "^2.6.1",
