Finalized Everything Final Testing Left Removed New Bill Option Removed Hardcoding of Host and Port SideNav Expansion And Shrink Done Moved All jsReport template ids to Config module

--- a/jsreport/data/assets/Invoice logo.png/config.json
+++ b/jsreport/data/assets/Invoice logo.png/config.json
@@ -1,7 +1,7 @@
 {
     "shortid": "SkKBCK39l",
     "modificationDate": {
-        "$$date": 1502015192993
+        "$$date": 1507111955638
     },
-    "_id": "tnQVxh8wlM9tlqUq"
+    "_id": "g628USKhSA85dKOY"
 }
