--- a/jsreport/data/assets/Invoice styles.css/config.json
+++ b/jsreport/data/assets/Invoice styles.css/config.json
@@ -1,7 +1,7 @@
 {
     "shortid": "ByKOCF3cg",
     "modificationDate": {
-        "$$date": 1502015193035
+        "$$date": 1507111955662
     },
-    "_id": "FapbxFwzudO53efg"
+    "_id": "ltDIbE1xc2DzK3Q1"
 }
