--- a/jsreport/data/assets/global helpers.js/config.json
+++ b/jsreport/data/assets/global helpers.js/config.json
@@ -2,7 +2,7 @@
     "shortid": "SkMw3X69l",
     "isSharedHelper": true,
     "modificationDate": {
-        "$$date": 1502015193012
+        "$$date": 1507111955652
     },
-    "_id": "260hFll0m3jiOAus"
+    "_id": "lQFLEl0kpMUhwOIr"
 }
