--- a/jsreport/data/data/Invoice/config.json
+++ b/jsreport/data/data/Invoice/config.json
@@ -1,8 +1,10 @@
 {
     "shortid": "Sy5S19ncg",
-    "creationDate": "2017-08-06T10:26:33.012Z",
-    "modificationDate": {
-        "$$date": 1502015528695
+    "creationDate": {
+        "$$date": 1507111955652
     },
-    "_id": "gdMu5LXilYIh4D4f"
+    "modificationDate": {
+        "$$date": 1507111955652
+    },
+    "_id": "llkHWHtXqTXTC66l"
 }
