--- a/jsreport/data/scripts/Orders/config.json
+++ b/jsreport/data/scripts/Orders/config.json
@@ -1,8 +1,10 @@
 {
     "shortid": "BJX1Jw82ce",
-    "creationDate": "2017-08-06T10:26:32.993Z",
-    "modificationDate": {
-        "$$date": 1504288444712
+    "creationDate": {
+        "$$date": 1507111955638
     },
-    "_id": "nfbhPUcIAYbJ9a0I"
+    "modificationDate": {
+        "$$date": 1507111955638
+    },
+    "_id": "CW1d56akiZ0zZ9A6"
 }
