--- a/jsreport/data/templates/INVOICE/config.json
+++ b/jsreport/data/templates/INVOICE/config.json
@@ -1,9 +1,9 @@
 {
-    "shortid": "rJUkrNfhZ",
+    "shortid": "HyXetr73b",
     "recipe": "phantom-pdf",
     "engine": "jsrender",
     "modificationDate": {
-        "$$date": 1507186383378
+        "$$date": 1507186383380
     },
-    "_id": "Y4TiCyTTmqdDIlvX"
+    "_id": "sUqmqEYO8IgWA2tr"
 }
