--- a/jsreport/data/templates/TRX REPORT/config.json
+++ b/jsreport/data/templates/TRX REPORT/config.json
@@ -1,12 +1,9 @@
 {
-    "shortid": "H1e0jWYdZ",
+    "shortid": "BJZrr4G3Z",
     "recipe": "phantom-pdf",
     "engine": "jsrender",
     "modificationDate": {
-        "$$date": 1505831245832
+        "$$date": 1507186383378
     },
-    "_id": "EP2T43DkTbrXzz3J",
-    "data": {
-        "shortid": "ryTBJOfc-"
-    }
+    "_id": "TghnecbNe4ACAEon"
 }
