--- a/jsreport/data/templates/STK REPORT/config.json
+++ b/jsreport/data/templates/STK REPORT/config.json
@@ -1,9 +1,9 @@
 {
-    "shortid": "rJUkrNfhZ",
+    "shortid": "HkUNSVGn-",
     "recipe": "phantom-pdf",
     "engine": "jsrender",
     "modificationDate": {
-        "$$date": 1507186383378
+        "$$date": 1507186383374
     },
-    "_id": "Y4TiCyTTmqdDIlvX"
+    "_id": "WhglImMl4KLIPfIF"
 }
